feat: get organizations for the authenticated user
